--- a/Children Info.html
+++ b/Children Info.html
@@ -277,7 +277,7 @@
 
 								<div class="col-md-12 d-flex  align-items-center justify-content-center ">
 									<label for="inputClass" class="form-label mx-2">Search by Gradation No.: </label>
-									<input type="text" name="txtSearchGradation" size="15" maxlength="16" value="">
+									<input style="width: 150px;" class="form-control" type="text" name="txtSearchGradation" maxlength="16" value="">
 									<button type="submit" class="btn btn-success mx-2   px-2 py-0 ">GO</button>
 								</div>
 
@@ -310,7 +310,7 @@
 										<td>17-01-2002</td>
 										<td>Male</td>
 
-										<td><button type="submit" class="btn btn-outline-success  py-0 ">Edit</button>
+										<td class="text-center"><button type="submit" class="btn btn-outline-success  py-0 ">Edit</button>
 										</td>
 									</tr>
 									<tr>
@@ -318,7 +318,7 @@
 										<td style="width: 100px;">17-01-2002</td>
 										<td style="width: 100px;">Male</td>
 
-										<td><button type="submit" class="btn btn-outline-success  py-0 ">Edit</button>
+										<td class="text-center"><button type="submit" class="btn btn-outline-success  py-0 ">Edit</button>
 										</td>
 									</tr>
 
