--- a/Foreign Travel.html
+++ b/Foreign Travel.html
@@ -275,7 +275,7 @@
 
 								<div class="col-md-12 d-flex  align-items-center justify-content-center ">
 									<label for="inputClass" class="form-label mx-2">Search by Gradation No.: </label>
-									<input type="text" name="txtSearchGradation" size="15" maxlength="16" value="">
+									<input style="width: 150px;" class="form-control" type="text" name="txtSearchGradation" maxlength="16" value="">
 									<button type="submit" class="btn btn-success mx-2   px-2 py-0 ">GO</button>
 								</div>
 
@@ -294,8 +294,8 @@
 
 										<td scope="col">Country</td>
 										<td scope="col">Purpose</td>
-										<td scope="col">From</td>
-										<td scope="col">To</td>
+										<td style="width: 100px;">From</td>
+										<td style="width: 100px;">To</td>
 										<td scope="col">Remark</td>
 										<td scope="col"></td>
 									</tr>
@@ -307,8 +307,8 @@
 									<tr>
 										<td>Australia</td>
 										<td>Study M Engineering in Software and Information Systems</td>
-										<td style="width: 100px;">17-01-2002</td>
-										<td style="width: 100px;">30-06-2003</td>
+										<td >17-01-2002</td>
+										<td >30-06-2003</td>
 										<td>Awarded AusAid Scholarship</td>
 										<td><button type="submit" class="btn btn-outline-success  py-0 ">Edit</button>
 										</td>
@@ -316,8 +316,8 @@
 									<tr>
 										<td>Australia</td>
 										<td>Study M Engineering in Software and Information Systems</td>
-										<td style="width: 100px;">17-01-2002</td>
-										<td style="width: 100px;">30-06-2003</td>
+										<td >17-01-2002</td>
+										<td >30-06-2003</td>
 										<td>Awarded AusAid Scholarship</td>
 										<td><button type="submit" class="btn btn-outline-success  py-0 ">Edit</button>
 										</td>
@@ -325,8 +325,8 @@
 									<tr>
 										<td>Australia</td>
 										<td>Study M Engineering in Software and Information Systems</td>
-										<td style="width: 100px;">17-01-2002</td>
-										<td style="width: 100px;">30-06-2003</td>
+										<td>17-01-2002</td>
+										<td>30-06-2003</td>
 										<td>Awarded AusAid Scholarship</td>
 										<td><button type="submit" class="btn btn-outline-success  py-0 ">Edit</button>
 										</td>
