--- a/Education Info.html
+++ b/Education Info.html
@@ -79,11 +79,12 @@
                         <a href="Search Officers.html">Search Officers</a>
                       </li>
                       <li><a href="Search Staffs.html">Search Staffs</a></li>
-                      <li><a href="index.html">grade 9 & Above</a></li>
+                      <li><a href="index.html">Grade 9 & Above</a></li>
                       <li><a href="index.html">Sub-Assistent Engineer</a></li>
                       <li><a href="index.html">Class 3 Employees</a></li>
                       <li><a href="index.html">Class 4 Employees</a></li>
-                      <li><a href="index.html">Current Postings</a></li>
+                     <li> <a href="Current Posting.html"></i>Current Postings</a>
+										</li>
                       <li><a href="index.html">Posting Date</a></li>
                       <li>
                         <a href="Vacant Post Officers.html"
