--- a/Honours.html
+++ b/Honours.html
@@ -61,7 +61,7 @@
 						</li>
 						<li> <a href="Search Staffs.html"></i>Search Staffs</a>
 						</li>
-						<li> <a href="index.html"></i>grade 9 & Above</a>
+						<li> <a href="index.html"></i>Grade 9 & Above</a>
 						</li>
 						<li> <a href="index.html"></i>Sub-Assistent Engineer</a>
 						</li>
