--- a/Language Skill.html
+++ b/Language Skill.html
@@ -68,15 +68,15 @@
 										</li>
 										<li> <a href="Search Staffs.html"></i>Search Staffs</a>
 										</li>
-										<li> <a href="index.html"></i>grade 9 & Above</a>
+										<li> <a href="Grade 9 & Above.html">Grade 9 & Above</a>
 										</li>
 										<li> <a href="index.html"></i>Sub-Assistent Engineer</a>
 										</li>
-										<li> <a href="index.html"></i>Class 3 Employees</a>
+										<li> <a href="Class 3 Employee.html"></i>Class 3 Employees</a>
 										</li>
-										<li> <a href="index.html"></i>Class 4 Employees</a>
+										<li> <a href="Class 4 Employee.html"></i>Class 4 Employees</a>
 										</li>
-										<li> <a href="index.html"></i>Current Postings</a>
+										<li> <a href="Current Posting.html"></i>Current Postings</a>
 										</li>
 										<li> <a href="index.html"></i>Posting Date</a>
 										</li>
