--- a/Index.html
+++ b/Index.html
@@ -95,7 +95,8 @@
                       <li>
                         <a href="Current Posting.html">Current Postings</a>
                       </li>
-                      <li><a href="index.html">Posting Date</a></li>
+                      <li><a href="Posting Date.html">Posting Date</a></li>
+
                       <li>
                         <a href="Vacant Post Officers.html"
                           >Vacant Posts(Officers)</a
@@ -106,19 +107,37 @@
                           >Vacant Posts(Staff)</a
                         >
                       </li>
-                      <li><a href="Officer In Deputation.html">Officers in Deputation</a></li>
-                      <li><a href="Officer In Lien.html">Officers on Lien</a></li>
-                      <li><a href="Officer In Reserve.html">Officers in Reserve</a></li>
                       <li>
-                        <a href="Officer In Foreign.html">Officers in Foreign Country</a>
+                        <a href="Officer In Deputation.html"
+                          >Officers in Deputation</a
+                        >
                       </li>
-                      <li><a href="Officer On Leave.html">Officers on Leave</a></li>
+                      <li>
+                        <a href="Officer In Lien.html">Officers on Lien</a>
+                      </li>
+                      <li>
+                        <a href="Officer In Reserve.html"
+                          >Officers in Reserve</a
+                        >
+                      </li>
+                      <li>
+                        <a href="Officer In Foreign.html"
+                          >Officers in Foreign Country</a
+                        >
+                      </li>
+                      <li>
+                        <a href="Officer On Leave.html">Officers on Leave</a>
+                      </li>
                       <li>
                         <a href="PRL Dates.html">PRL Dates of Officers</a>
                       </li>
                       <li><a href="Employee Added.html">Employee Added</a></li>
                       <li><a href="PDS Update.html">PDS Update List</a></li>
-                      <li><a href="Foreign Travel Report.html">Foreign Travel Reports</a></li>
+                      <li>
+                        <a href="Foreign Travel Report.html"
+                          >Foreign Travel Reports</a
+                        >
+                      </li>
                     </ul>
                   </div>
                 </div>
@@ -287,7 +306,7 @@
         <div class="row">
           <div class="col-md-5 pwdimg">
             <img
-              style="border: 20px solid #666666"
+              style="border: 5px solid #000000"
               src="./assets/pwdho.jpg"
               alt=""
             />
@@ -305,7 +324,7 @@
             </p>
           </div>
           <div class="col-md-5">
-            <p style="font-size: 16px; color: #666666; text-align: justify">
+            <p style="font-size: 16px; color: #000000; text-align: justify">
               <b>Public Works Department (PWD),</b> under the Ministry of
               Housing and Public Works, is the pioneer in construction arena of
               Bangladesh. Over about two centuries, PWD could successfully set
