--- a/Officer In Lien.html
+++ b/Officer In Lien.html
@@ -59,53 +59,73 @@
 								data-bs-parent="#accordionExample">
 								<div class="accordion-body">
 									<ul>
-										<li> <a href="Short PDS.html">Short PDS</a>
+										<li><a href="Short PDS.html">Short PDS</a></li>
+										<li><a href="PDS Printing.html">PDS Printing</a></li>
+										<li>
+										  <a href="Search Officers.html">Search Officers</a>
 										</li>
-										<li> <a href="PDS Printing.html">PDS Printing</a>
+										<li><a href="Search Staffs.html">Search Staffs</a></li>
+										<li>
+										  <a href="Grade 9 & Above.html">Grade 9 & Above</a>
 										</li>
-										<li> <a href="Search Officers.html">Search Officers</a>
+										<li>
+										  <a href="Sub-Assistant Engineers.html"
+											>Sub-Assistent Engineer</a
+										  >
 										</li>
-										<li> <a href="Search Staffs.html">Search Staffs</a>
+										<li>
+										  <a href="Class 3 Employee.html">Class 3 Employees</a>
 										</li>
-										<li> <a href="Grade 9 & Above.html">Grade 9 & Above</a>
+										<li>
+										  <a href="Class 4 Employee.html">Class 4 Employees</a>
 										</li>
-										<li> <a href="Sub-Assistant Engineers.html"></i>Sub-Assistent Engineer</a>
+										<li>
+										  <a href="Current Posting.html">Current Postings</a>
 										</li>
-									<li> <a href="Class 3 Employee.html"></i>Class 3 Employees</a>
+										<li><a href="Posting Date.html">Posting Date</a></li>
+				  
+										<li>
+										  <a href="Vacant Post Officers.html"
+											>Vacant Posts(Officers)</a
+										  >
 										</li>
-										<li> <a href="Class 4 Employee.html"></i>Class 4 Employees</a>
+										<li>
+										  <a href="Vacant Post Staffs.html"
+											>Vacant Posts(Staff)</a
+										  >
 										</li>
-										<li> <a href="Current Posting.html"></i>Current Postings</a>
+										<li>
+										  <a href="Officer In Deputation.html"
+											>Officers in Deputation</a
+										  >
 										</li>
-										<li> <a href="index.html">Posting Date</a>
+										<li>
+										  <a href="Officer In Lien.html">Officers on Lien</a>
 										</li>
-										<li> <a href="Vacant Post Officers.html">Vacant Posts(Officers)</a>
+										<li>
+										  <a href="Officer In Reserve.html"
+											>Officers in Reserve</a
+										  >
 										</li>
-										<li> <a href="Vacant Post Staffs.html">Vacant Posts(Staff)</a>
+										<li>
+										  <a href="Officer In Foreign.html"
+											>Officers in Foreign Country</a
+										  >
 										</li>
-										<li> <a href="index.html">Officers in Deputation</a>
+										<li>
+										  <a href="Officer On Leave.html">Officers on Leave</a>
 										</li>
-										<li> <a href="index.html">Officers on Lien</a>
+										<li>
+										  <a href="PRL Dates.html">PRL Dates of Officers</a>
 										</li>
-										<li> <a href="index.html">Officers in Reserve</a>
+										<li><a href="Employee Added.html">Employee Added</a></li>
+										<li><a href="PDS Update.html">PDS Update List</a></li>
+										<li>
+										  <a href="Foreign Travel Report.html"
+											>Foreign Travel Reports</a
+										  >
 										</li>
-										<li> <a href="index.html">Officers in Foreign Country</a>
-										</li>
-										<li> <a href="index.html">Officers on Leave</a>
-										</li>
-										<li> <a href="PRL Dates.html">PRL Dates of Officers</a>
-										</li>
-										<li> <a href="index.html">Employee Added</a>
-										</li>
-										<li> <a href="index.html">PDS Update List</a>
-										</li>
-										<li> <a href="index.html">Foreign Travel Reports</a>
-										</li>
-
-
-
-
-									</ul>
+									  </ul>
 								</div>
 							</div>
 						</div>
@@ -289,7 +309,7 @@
 										<td></td>
 										<td ></td>
 										<td ></td>
-										<td></td>
+										
 										<td>
 										</td>
 									</tr>
@@ -309,6 +329,7 @@
 			</div>
 
 		</div>
+		</div>
 
 
 	<footer class="page-footer">
@@ -316,15 +337,17 @@
 	</footer>
 
 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-		crossorigin="anonymous"></script>
-	<!--plugins-->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/plugins/simplebar/js/simplebar.min.js"></script>
-	<script src="assets/plugins/metismenu/js/metisMenu.min.js"></script>
-	<script src="assets/plugins/perfect-scrollbar/js/perfect-scrollbar.js"></script>
-	<!--app JS-->
-	<script src="assets/js/app.js"></script>
+	<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+	crossorigin="anonymous"
+  ></script>
+  <!--plugins-->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/plugins/simplebar/js/simplebar.min.js"></script>
+  <script src="assets/plugins/metismenu/js/metisMenu.min.js"></script>
+  <script src="assets/plugins/perfect-scrollbar/js/perfect-scrollbar.js"></script>
+  <!--app JS-->
+  <script src="assets/js/app.js"></script>
 </body>
 </html>
