--- a/Personal Info.html
+++ b/Personal Info.html
@@ -61,53 +61,73 @@
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
                                     <ul>
-                                        <li> <a href="index.html"></i>Short PDS</a>
+                                        <li><a href="Short PDS.html">Short PDS</a></li>
+                                        <li><a href="PDS Printing.html">PDS Printing</a></li>
+                                        <li>
+                                          <a href="Search Officers.html">Search Officers</a>
                                         </li>
-                                        <li> <a href="PDS Printing.html"></i>PDS Printing</a>
+                                        <li><a href="Search Staffs.html">Search Staffs</a></li>
+                                        <li>
+                                          <a href="Grade 9 & Above.html">Grade 9 & Above</a>
                                         </li>
-                                        <li> <a href="Search Officers.html"></i>Search Officers</a>
+                                        <li>
+                                          <a href="Sub-Assistant Engineers.html"
+                                            >Sub-Assistent Engineer</a
+                                          >
                                         </li>
-                                        <li> <a href="Search Staffs.html"></i>Search Staffs</a>
+                                        <li>
+                                          <a href="Class 3 Employee.html">Class 3 Employees</a>
                                         </li>
-                                        <li> <a href="index.html"></i>Grade 9 & Above</a>
+                                        <li>
+                                          <a href="Class 4 Employee.html">Class 4 Employees</a>
                                         </li>
-                                        <li> <a href="index.html"></i>Sub-Assistent Engineer</a>
+                                        <li>
+                                          <a href="Current Posting.html">Current Postings</a>
                                         </li>
-                                        <li> <a href="index.html"></i>Class 3 Employees</a>
+                                        <li><a href="Posting Date.html">Posting Date</a></li>
+                  
+                                        <li>
+                                          <a href="Vacant Post Officers.html"
+                                            >Vacant Posts(Officers)</a
+                                          >
                                         </li>
-                                        <li> <a href="index.html"></i>Class 4 Employees</a>
+                                        <li>
+                                          <a href="Vacant Post Staffs.html"
+                                            >Vacant Posts(Staff)</a
+                                          >
                                         </li>
-                                        <li> <a href="index.html"></i>Current Postings</a>
+                                        <li>
+                                          <a href="Officer In Deputation.html"
+                                            >Officers in Deputation</a
+                                          >
                                         </li>
-                                        <li> <a href="index.html"></i>Posting Date</a>
+                                        <li>
+                                          <a href="Officer In Lien.html">Officers on Lien</a>
                                         </li>
-                                        <li> <a href="Vacant Post Officers.html"></i>Vacant Posts(Officers)</a>
+                                        <li>
+                                          <a href="Officer In Reserve.html"
+                                            >Officers in Reserve</a
+                                          >
                                         </li>
-                                        <li> <a href="Vacant Post Staffs.html"></i>Vacant Posts(Staff)</a>
+                                        <li>
+                                          <a href="Officer In Foreign.html"
+                                            >Officers in Foreign Country</a
+                                          >
                                         </li>
-                                        <li> <a href="index.html"></i>Officers in Deputation</a>
+                                        <li>
+                                          <a href="Officer On Leave.html">Officers on Leave</a>
                                         </li>
-                                        <li> <a href="index.html"></i>Officers on Lien</a>
+                                        <li>
+                                          <a href="PRL Dates.html">PRL Dates of Officers</a>
                                         </li>
-                                        <li> <a href="index.html"></i>Officers in Reserve</a>
+                                        <li><a href="Employee Added.html">Employee Added</a></li>
+                                        <li><a href="PDS Update.html">PDS Update List</a></li>
+                                        <li>
+                                          <a href="Foreign Travel Report.html"
+                                            >Foreign Travel Reports</a
+                                          >
                                         </li>
-                                        <li> <a href="index.html"></i>Officers in Foreign Country</a>
-                                        </li>
-                                        <li> <a href="index.html"></i>Officers on Leave</a>
-                                        </li>
-                                        <li> <a href="index.html"></i>PRL Dates ofOfficers</a>
-                                        </li>
-                                        <li> <a href="index.html"></i>Employee Added</a>
-                                        </li>
-                                        <li> <a href="index.html"></i>PDS Update List</a>
-                                        </li>
-                                        <li> <a href="index.html"></i>Foreign Travel Reports</a>
-                                        </li>
-
-
-
-
-                                    </ul>
+                                      </ul>
                                 </div>
                             </div>
                         </div>
@@ -199,44 +219,44 @@
                                 aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
                                     <ul>
-                                        <li> <a href="ecommerce-products.html"></i>User Administration</a>
+                                        <li> <a href="ecommerce-products.html">User Administration</a>
                                         </li>
-                                        <li> <a href="ecommerce-products.html"></i>Officers Of PWD</a>
+                                        <li> <a href="ecommerce-products.html">Officers Of PWD</a>
                                         </li>
-                                        <li> <a href="ecommerce-products.html"></i>Posts Of PWD</a>
+                                        <li> <a href="ecommerce-products.html">Posts Of PWD</a>
                                         </li>
-                                        <li> <a href="ecommerce-products.html"></i>Designations</a>
+                                        <li> <a href="ecommerce-products.html">Designations</a>
                                         </li>
-                                        <li> <a href="ecommerce-products.html"></i>BCS Batches</a>
+                                        <li> <a href="ecommerce-products.html">BCS Batches</a>
                                         </li>
-                                        <li> <a href="ecommerce-products.html"></i>Payscale</a>
+                                        <li> <a href="ecommerce-products.html">Payscale</a>
                                         </li>
-                                        <li> <a href="ecommerce-products.html"></i>Academic Degree</a>
+                                        <li> <a href="ecommerce-products.html">Academic Degree</a>
                                         </li>
-                                        <li> <a href="ecommerce-products.html"></i>Major Subject</a>
+                                        <li> <a href="ecommerce-products.html">Major Subject</a>
                                         </li>
-                                        <li> <a href="ecommerce-products.html"></i>Create institute</a>
+                                        <li> <a href="ecommerce-products.html">Create institute</a>
                                         </li>
-                                        <li> <a href="ecommerce-products.html"></i>Training Topics</a>
+                                        <li> <a href="ecommerce-products.html">Training Topics</a>
                                         </li>
-                                        <li> <a href="ecommerce-products.html"></i>Training Sponsors</a>
+                                        <li> <a href="ecommerce-products.html">Training Sponsors</a>
                                         </li>
-                                        <li> <a href="ecommerce-products.html"></i>Academic Degree</a>
+                                        <li> <a href="ecommerce-products.html">Academic Degree</a>
                                         </li>
-                                        <li> <a href="ecommerce-products.html"></i>Affliation</a>
+                                        <li> <a href="ecommerce-products.html">Affliation</a>
                                         </li>
-                                        <li> <a href="ecommerce-products.html"></i>language Names</a>
+                                        <li> <a href="ecommerce-products.html">language Names</a>
                                         </li>
-                                        <li> <a href="ecommerce-products.html"></i>Leaves Types</a>
+                                        <li> <a href="ecommerce-products.html">Leaves Types</a>
                                         </li>
-                                        <li> <a href="ecommerce-products.html"></i>Mark Retired (Class 1)</a>
+                                        <li> <a href="ecommerce-products.html">Mark Retired (Class 1)</a>
                                         </li>
-                                        <li> <a href="ecommerce-products.html"></i>Mark Retired (Class 2)</a>
+                                        <li> <a href="ecommerce-products.html">Mark Retired (Class 2)</a>
                                         </li>
-                                        <li> <a href="ecommerce-products.html"></i>Mark Retired (Class 1) (Freedom
+                                        <li> <a href="ecommerce-products.html">Mark Retired (Class 1) (Freedom
                                                 Fighter)</a>
                                         </li>
-                                        <li> <a href="ecommerce-products.html"></i>Mark Retired (Class 2) (Freedom
+                                        <li> <a href="ecommerce-products.html">Mark Retired (Class 2) (Freedom
                                                 Fighter)</a>
                                         </li>
 
