--- a/Spouse Info.html
+++ b/Spouse Info.html
@@ -73,19 +73,31 @@
                 >
                   <div class="accordion-body">
                     <ul>
-                      <li><a href="index.html">Short PDS</a></li>
+                      <li><a href="Short PDS.html">Short PDS</a></li>
                       <li><a href="PDS Printing.html">PDS Printing</a></li>
                       <li>
                         <a href="Search Officers.html">Search Officers</a>
                       </li>
                       <li><a href="Search Staffs.html">Search Staffs</a></li>
-                      <li><a href="index.html">Grade 9 & Above</a></li>
-                      <li><a href="index.html">Sub-Assistent Engineer</a></li>
-                      <li><a href="index.html">Class 3 Employees</a></li>
-                      <li><a href="index.html">Class 4 Employees</a></li>
-                     <li> <a href="Current Posting.html"></i>Current Postings</a>
-										</li>
-                      <li><a href="index.html">Posting Date</a></li>
+                      <li>
+                        <a href="Grade 9 & Above.html">Grade 9 & Above</a>
+                      </li>
+                      <li>
+                        <a href="Sub-Assistant Engineers.html"
+                          >Sub-Assistent Engineer</a
+                        >
+                      </li>
+                      <li>
+                        <a href="Class 3 Employee.html">Class 3 Employees</a>
+                      </li>
+                      <li>
+                        <a href="Class 4 Employee.html">Class 4 Employees</a>
+                      </li>
+                      <li>
+                        <a href="Current Posting.html">Current Postings</a>
+                      </li>
+                      <li><a href="Posting Date.html">Posting Date</a></li>
+
                       <li>
                         <a href="Vacant Post Officers.html"
                           >Vacant Posts(Officers)</a
@@ -96,19 +108,37 @@
                           >Vacant Posts(Staff)</a
                         >
                       </li>
-                      <li><a href="index.html">Officers in Deputation</a></li>
-                      <li><a href="index.html">Officers on Lien</a></li>
-                      <li><a href="index.html">Officers in Reserve</a></li>
                       <li>
-                        <a href="index.html">Officers in Foreign Country</a>
+                        <a href="Officer In Deputation.html"
+                          >Officers in Deputation</a
+                        >
                       </li>
-                      <li><a href="index.html">Officers on Leave</a></li>
+                      <li>
+                        <a href="Officer In Lien.html">Officers on Lien</a>
+                      </li>
+                      <li>
+                        <a href="Officer In Reserve.html"
+                          >Officers in Reserve</a
+                        >
+                      </li>
+                      <li>
+                        <a href="Officer In Foreign.html"
+                          >Officers in Foreign Country</a
+                        >
+                      </li>
+                      <li>
+                        <a href="Officer On Leave.html">Officers on Leave</a>
+                      </li>
                       <li>
                         <a href="PRL Dates.html">PRL Dates of Officers</a>
                       </li>
-                      <li><a href="index.html">Employee Added</a></li>
-                      <li><a href="index.html">PDS Update List</a></li>
-                      <li><a href="index.html">Foreign Travel Reports</a></li>
+                      <li><a href="Employee Added.html">Employee Added</a></li>
+                      <li><a href="PDS Update.html">PDS Update List</a></li>
+                      <li>
+                        <a href="Foreign Travel Report.html"
+                          >Foreign Travel Reports</a
+                        >
+                      </li>
                     </ul>
                   </div>
                 </div>
